--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="bg-white p-10 rounded-3xl max-w-3xl">
         <div>
           <div class="mb-8">
-            <img class="rounded-xl" src="../assets/images/image-omelette.jpeg" alt="">
+            <img class="rounded-xl" src="./assets/images/image-omelette.jpeg" alt="">
           </div>
           <h1 class="text-4xl font-YoungSerif font-medium text-stone-900 mb-6">Simple Omelette Recipe</h1>
           <p class="text-stone-600 font-Outfit font-medium mb-8">
