--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap" rel="stylesheet">
-    <link href="./src/output.css" rel="stylesheet">
+    <link href="../src/css/output.css" rel="stylesheet">
 
     <title>Frontend Mentor | Recipe page</title>
   </head>
@@ -26,7 +26,7 @@
       <section class="bg-white p-10 rounded-3xl max-w-3xl">
         <div>
           <div class="mb-8">
-            <img class="rounded-xl" src="./assets/images/image-omelette.jpeg" alt="">
+            <img class="rounded-xl" src="../assets/images/image-omelette.jpeg" alt="">
           </div>
           <h1 class="text-4xl font-YoungSerif font-medium text-stone-900 mb-6">Simple Omelette Recipe</h1>
           <p class="text-stone-600 font-Outfit font-medium mb-8">
